--- a/styles/common.css
+++ b/styles/common.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Open Sans';
-  min-width: 380px;
-  overflow: hidden;
+  min-width: 360px;
+  overflow-x: auto;
 }
 
 button,
